--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
     <img src="Imagen/diagrama%20mio.png" class="imagen-grande" alt="Diagrama IA">
   </section>
             
+<section>
+  <h3 class="font-subtitle">Ejemplo de Cajas</h3>
+  <div class="hermano-container">
+    <div class="hermano">Por Sailor Moon</div>
+    <div class="hermano">Yo le echo</div>
+    <div class="hermano">Ganas a la vida</div>
+  </div>
+</section>
+            
 </div>
         <footer class="footer">
   <div class="footer-container">
